@@ -1,6 +1,7 @@
 2011-04-19  Ingo Renner  <ingo@typo3.org>
 
 	* Added implementation of the projects indexer
+	* Fixed missing siteHash field in Solr documents
 
 2011-04-18  Ingo Renner  <ingo@typo3.org>
 
